<resources>
    <string name="app_name">Stady DataBase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_amount">food amount</string>
    <string name="food_weight">food weight</string>
    <string name="food_price">food price</string>
    <string name="food_category">food category</string>
    <string name="food_name">food name</string>
    <string name="input_details_of_food">Input details of food:</string>
    <string name="add">add</string>
    <string name="back">back</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="weight">Weight</string>
    <string name="amount">Amount</string>
    <string name="delete">delete</string>
    <string name="test">Hello item</string>
</resources>