<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.detailsfragment.DetailsFragment"
    tools:ignore="MissingConstraints">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/food_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20sp"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_fastfood_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_name" />

    <TextView
        android:id="@+id/food_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="30sp"
        android:layout_margin="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/food_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="30sp"
        android:layout_margin="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_category" />

    <TextView
        android:id="@+id/food_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textSize="30sp"
        android:layout_margin="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_price" />

    <TextView
        android:id="@+id/food_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="30sp"
        android:layout_margin="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_weight" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_back_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_margin="15sp"
        android:contentDescription="@string/back" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_baseline_delete_24"
        android:layout_margin="15sp"
        android:contentDescription="@string/delete" />

</androidx.constraintlayout.widget.ConstraintLayout>